--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port=8080
 ############ MySQL #########################################################
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_employees
-spring.datasource.username=springuser
-spring.datasource.password=password
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/company_crm_api
+spring.datasource.username=springuser_2
+spring.datasource.password=password2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 ############ SSL #########################################################
 #logging.level.org.springframework.web: trace
 #logging.level.org.apache: trace
 ############ HTTPS #########################################################
+server.error.include-message=always
