--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #logging.level.org.apache: trace
 ############ HTTPS #########################################################
 server.error.include-message=always
+#server.error.whitelabel.enabled=false
